[package]
name = "cant-happen"
description = "A lib and a manifesto on panicking gracefully and only if it can't happen"
version = "0.1.1"
edition = "2024"
license = "MIT or Apache-2.0"
exclude = [".zed/*"]

[dependencies]
lazy_static = "1.5.0"
regex = "1.12.2"
urlencoding = "2.1.3"

[features]
default = []
github = []
